--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,3 +3,19 @@ body {
   min-height: 75rem;
   padding-top: 4.5rem;
 }
+
+/*parallax effect*/
+.background {
+    width: 100%;
+    height: 300px;
+    /*may want to remove or change height 300px, or set it on each image*/
+    min-height: 100%;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center center;
+}
+
+.background-forrest {
+    background-image: url(assets/forrest.jpg);
+    /*background-image: url(http://img.timeinc.net/time/photoessays/2008/trees/franklin_trees_01.jpg);*/
+}
