--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,3 +27,32 @@ body {
   background-color: purple;
   border-color: rgba(0,0,0,0.2);
 }
+
+/*email-address changes color and moves in a square*/
+.email-address {
+    width: 100%;
+    height: 100%;
+    /*background-color: red;*/
+    position: relative;
+    animation-name: email-address; /*references animation below*/
+    animation-duration: 4s;
+    animation-iteration-count: infinite;
+}
+
+/*this moves email-address in a square, right, down, left, up...*/
+/*@keyframes email-address {
+    0%   {color:red; left:0px; top:0px;}
+    25%  {color:orange; left:25px; top:0px;}
+    50%  {color:blue; left:25px; top:25px;}
+    75%  {color:purple; left:0px; top:25px;}
+    100% {color:red; left:0px; top:0px;}
+}*/
+
+/*this just changes color of email-address, no motion */
+@keyframes email-address {
+    0%   {color:black; }
+    25%  {color:yellow; background-color: purple;}
+    50%  {color:orange; background-color: blue;}
+    75%  {color:purple; background-color: yellow;}
+    100% {color:red; }
+}
