--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,9 +34,41 @@ body {
 }
 
 
-/* border animation around profile picture??? */
-/* border animation around profile picture??? */
-/* border animation around profile picture??? */
+/* shimmer effect on text */
+
+.shimmer {
+  display: inline-block;
+  color: white;
+
+  /*background: black -webkit-gradient(linear, 100% 0, 0 0, from(black), color-stop(0.5, #ffffff), to(black));*/
+  /*background: #292b2c -webkit-gradient(linear, 100% 0, 0 0, from(#292b2c), color-stop(0.5, #ffffff), to(#292b2c));*/
+
+  background: #292b2c -webkit-gradient(linear, 100% 0, 0 0, from(#292b2c), color-stop(0.5, #ffffff), to(#292b2c));
+
+  background-position: -4rem top; /*50px*/
+  background-repeat: no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation-name: shimmer;
+  -webkit-animation-duration: 2.2s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-background-size: 4rem 100%; /*50px*/
+
+}
+
+@-webkit-keyframes shimmer {
+    0% {
+        background-position: -4rem top; /*50px*/
+    }
+
+    70% {
+        background-position: 15.5rem top; /*~240px*/
+    }
+
+    100% {
+        background-position: 15.5rem top; /*~240px*/
+    }
+}
 
 
 /* rotating profile pictures */
