--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,21 +12,34 @@ body {
 }
 
 /*parallax effect*/
+/*.background {*/
+    /*width: 100%;*/
+    /*height: 500px;*/
+    /*may want to remove or change height 300px, or set it on each image*/
+    /*min-height: 100%;*/
+    /*background-attachment: fixed;*/
+    /*background-size: auto;*/
+    /*background-size: cover;*/
+    /*background-position: center center;*/
+/*}*/
+
 .background {
     width: 100%;
-    height: 500px;
-    /*may want to remove or change height 300px, or set it on each image*/
-    min-height: 100%;
+    height: 100%;
+    /*min-width: 100%;*/
     background-attachment: fixed;
-    /*background-size: auto;*/
+    /*fixed background-attachment is what gives the image the parallax effect*/
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
-    background-position: center center;
+    background-color: black;
+    min-height: 550px;
 }
 
 .background-forrest {
     /*background-image: url(assets/forrest.jpg);*/
     background-image: url(assets/data-web-gif.gif);
-
+    min-height: 550px;
 /*making this background image for now so it looks ok on mobile*/
 
     /*background-image: url(http://img.timeinc.net/time/photoessays/2008/trees/franklin_trees_01.jpg);*/
