--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,16 +13,6 @@ body {
 }
 
 /*parallax effect*/
-/*.background {*/
-    /*width: 100%;*/
-    /*height: 500px;*/
-    /*may want to remove or change height 300px, or set it on each image*/
-    /*min-height: 100%;*/
-    /*background-attachment: fixed;*/
-    /*background-size: auto;*/
-    /*background-size: cover;*/
-    /*background-position: center center;*/
-/*}*/
 
 .background {
     width: 100%;
@@ -171,6 +161,47 @@ animation-duration: 10s;
 animation-direction: alternate;
 }
 
+
+/*--------- changing skills on hover -----------*/
+
+/* changing skill color on hover */
+.hoverSkill:hover {background: red;}
+
+/* Pulse Grow */
+ @-webkit-keyframes pulse-grow {
+    to {
+        -webkit-transform: scale(2.1);
+        transform: scale(2.1);
+    }
+}
+@keyframes pulse-grow {
+    to {
+        -webkit-transform: scale(2.1);
+        -ms-transform: scale(2.1);
+        transform: scale(2.1);
+    }
+}
+.pulse-grow {
+    display: inline-block;
+    -webkit-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    transform: translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.pulse-grow:hover {
+    -webkit-animation-name: pulse-grow;
+    animation-name: pulse-grow;
+    -webkit-animation-duration: 0.3s;
+    animation-duration: 0.3s;
+    -webkit-animation-timing-function: linear;
+    animation-timing-function: linear;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-direction: alternate;
+    animation-direction: alternate;
+}
+
+
 /*email-address changes color and moves in a square*/
 .email-address {
     width: 100%;
@@ -182,14 +213,6 @@ animation-direction: alternate;
     animation-iteration-count: infinite;
 }
 
-/*this moves email-address in a square, right, down, left, up...*/
-/*@keyframes email-address {
-    0%   {color:red; left:0px; top:0px;}
-    25%  {color:orange; left:25px; top:0px;}
-    50%  {color:blue; left:25px; top:25px;}
-    75%  {color:purple; left:0px; top:25px;}
-    100% {color:red; left:0px; top:0px;}
-}*/
 
 /*this just changes color of email-address, no motion */
 @keyframes email-address {
@@ -198,34 +221,6 @@ animation-direction: alternate;
     50%  {color:orange; background-color: blue;}
     75%  {color:purple; background-color: yellow;}
     100% {color:red; }
-}
-
-
-/* CUSTOMIZE THE CAROUSEL */
-
-/* Carousel base class */
-.carousel {
-  margin-bottom: 4rem;
-}
-
-/* Since positioning the image, we need to help out the caption */
-.carousel-caption {
-  z-index: 10;
-  bottom: 3rem;
-}
-
-/* Declare heights because of positioning of img element */
-.carousel-item {
-  height: 32rem;
-  background-color: #777;
-}
-
-.carousel-item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 32rem;
 }
 
 
