--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,7 +32,7 @@ body {
     background-image: url(assets/data-web-gif.gif);
     /*making this background image for now so it looks ok on mobile*/
     min-height: 550px;
-    background-size: contain;
+    background-size: cover;
     position: relative;
 }
 
@@ -232,8 +232,8 @@ animation-direction: alternate;
     /*background: url(assets/data-lady-glitch-gif.gif);*/
     background: url(assets/data-web-gif.gif);
     min-height: 600px;
-    background-size: contain;
-
+    /*background-size: contain;*/
+    background-size: cover;
   }
 }
 
@@ -243,10 +243,9 @@ animation-direction: alternate;
     /*background: url(assets/data-lady-glitch-gif.gif);*/
     background: url(assets/data-web-gif.gif);
     min-height: 600px;
-    background-size: contain;
-
+    /*background-size: contain;*/
+    background-size: cover;
     /*background-repeat: no-repeat;*/
     /*background-position: center center;*/
-
   }
 }
