--- a/stylesheet.css
+++ b/stylesheet.css
@@ -34,6 +34,9 @@ body {
     min-height: 550px;
     background-size: cover;
     position: relative;
+    /*trying this*/
+    max-width: 100%;
+    height: auto;
 }
 
 
@@ -224,6 +227,12 @@ animation-direction: alternate;
 }
 
 
+.my-footer {
+  background-color: #2f2f2f; /*gray black*/
+  color: white;
+}
+
+
 /* screen size changing image, below */
 
 /*small*/
@@ -231,7 +240,7 @@ animation-direction: alternate;
   .background-forrest {
     /*background: url(assets/data-lady-glitch-gif.gif);*/
     background: url(assets/data-web-gif.gif);
-    min-height: 600px;
+    /*min-height: 600px;*/
     /*background-size: contain;*/
     background-size: cover;
   }
@@ -242,10 +251,28 @@ animation-direction: alternate;
   .background-forrest {
     /*background: url(assets/data-lady-glitch-gif.gif);*/
     background: url(assets/data-web-gif.gif);
-    min-height: 600px;
+    /*min-height: 600px;*/
     /*background-size: contain;*/
     background-size: cover;
-    /*background-repeat: no-repeat;*/
-    /*background-position: center center;*/
+  }
+}
+
+/*large*/
+@media screen and (min-width: 992px) {
+  .background-forrest {
+    /*background: url(assets/data-lady-glitch-gif.gif);*/
+    background: url(assets/data-web-gif.gif);
+    min-height: 600px;
+    background-size: cover;
+  }
+}
+
+/*extra-large*/
+@media screen and (min-width: 1200px) {
+  .background-forrest {
+    /*background: url(assets/data-lady-glitch-gif.gif);*/
+    background: url(assets/data-web-gif.gif);
+    min-height: 600px;
+    background-size: cover;
   }
 }
