--- a/stylesheet.css
+++ b/stylesheet.css
@@ -82,6 +82,34 @@ body {
     background-image: url(assets/drought.jpg);
 }
 
+/* default skills image */
+.background-skills-default {
+    /*height: 50%;*/
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: black;
+    min-height: 350px;
+    background-image: url(assets/skills.svg);
+}
+
+/* skills image --- FOR NOW --------------- <<<<<< ------- */
+/* skills image --- FOR NOW --------------- <<<<<< ------- */
+/* skills image --- FOR NOW --------------- <<<<<< ------- */
+/* skills image --- FOR NOW --------------- <<<<<< ------- */
+/* skills image --- FOR NOW --------------- <<<<<< ------- */
+/* skills image --- FOR NOW --------------- <<<<<< ------- */
+.background-data-lady-glitch-gif-2 {
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-color: black;
+    min-height: 350px;
+    background-image: url(assets/data-lady-glitch-gif.gif);
+}
+
 
 #rotate_word_container {
   height: 300px;
@@ -164,7 +192,6 @@ body {
   height: 300px;
   width: 300px;
   margin: 0 auto;
-  /*background-image: url("https://www.royalcanin.com/~/media/Royal-Canin/Product-Categories/dog-medium-landing-hero.ashx");*/
   background-image: url("assets/profile_pic_Ethan_Ryan_brady_bunch.jpg");
 }
 
@@ -177,7 +204,6 @@ body {
     width: 100%;
     height: 100%;
     z-index: 1;
-    /*background-image: url("https://www.petfinder.com/wp-content/uploads/2012/11/152964589-welcome-home-new-cat-632x475.jpg");*/
     background-image: url("assets/profile_pic_Ethan_Ryan.jpg");
     background-repeat: no-repeat;
     background-position: 50% 0;
@@ -221,13 +247,17 @@ animation-direction: alternate;
 /* changing skill color on hover */
 .yellowSkill {
   background: yellow;
-  border: 2px solid green;
+  border: 2px solid red;
   padding: 5px;
   border-radius: 25px;
-  margin: 5px;
+  margin: 15px;
 }
 
-.yellowSkill:hover {background: red;}
+.yellowSkill:hover {
+  color: white;
+  background-color: red;
+  border: 2px solid yellow;
+}
 
 /* Pulse Grow */
  @-webkit-keyframes pulse-grow {
@@ -266,26 +296,26 @@ animation-direction: alternate;
 
 /* adding clicked-skill when each skill is clicked, and removing yellowSkill and pulse-grow */
 .clicked-skill {
-  color: white;
-  background-color: black;
-  border: 2px solid green;
+  /*color: white;*/
+  /*border: 2px solid green;*/
+  border: 2px dotted;
+  padding: 10px;
   border-radius: 25px;
-  margin: 5px;
+  line-height: 4;
 }
 
-/*email-address changes color and moves in a square*/
-.email-address {
-    width: 100%;
+/* colorful-text changes color */
+.colorful-text {
     height: 100%;
     position: relative;
-    animation-name: email-address; /*references animation below*/
-    animation-duration: 4s;
+    animation-name: colorful-text; /*references animation below*/
+    animation-duration: 5s;
     animation-iteration-count: infinite;
 }
 
 
-/*this just changes color of email-address, no motion */
-@keyframes email-address {
+/*this just changes color of colorful-text, no motion */
+@keyframes colorful-text {
     0%   {color:black; }
     25%  {color:yellow; background-color: purple;}
     50%  {color:orange; background-color: blue;}
