--- a/stylesheet.css
+++ b/stylesheet.css
@@ -243,7 +243,10 @@ animation-direction: alternate;
   width: 100%;
 }
 
-/*--------- changing skills on hover -----------*/
+.background-gradient {
+  background: linear-gradient(to bottom right, red, yellow);;
+}
+
 
 /* changing skill color on hover */
 .yellowSkill {
@@ -295,21 +298,26 @@ animation-direction: alternate;
     animation-direction: alternate;
 }
 
+/* forcing no padding in list columns */
+.col-3 {
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
 /* adding clicked-skill when each skill is clicked, and removing yellowSkill and pulse-grow */
 .clicked-skill {
   border: 2px dotted;
-  padding: 10px;
+  padding: 10px 5px 10px 5px;
   border-radius: 25px;
   line-height: 4;
 }
 
 .clicked-skill-after-winning {
-  border: 2px solid white;
-  padding: 10px;
+  border: 2px dotted yellow;
   border-radius: 25px;
   line-height: 6;
   color: white;
-  font-size: 20px;
+  font-size: 18px;
   text-shadow: 2px 2px 4px #FF0000;
   /*background: rgba(255, 255, 255, 0.5);*/
   background: black;
