--- a/stylesheet.css
+++ b/stylesheet.css
@@ -221,10 +221,9 @@ animation-direction: alternate;
 /*--------- keeping arrow on hover over skills -----------*/
 #skills-list {
   cursor: default;
-  padding: 50px;
-  /*border: 10px solid gray;*/
+  padding-top: 10%;
+  padding-bottom: 10%;
   background-color: black;
-
   height: 100%;
   background-repeat: no-repeat;
   background-position: center;
@@ -234,32 +233,33 @@ animation-direction: alternate;
 }
 
 /*--------- above and below skills after winning -----------*/
-.you-win {
-  line-height: 4;
-  font-size: 60px;
-  position: inherit;
-  border: 10px solid;
+.you-win-area {
+  padding-top: 65px;
+  padding-bottom: 65px;
+  font-size: 50px;
+  background-position: center;
+  background-size: cover;
+  border: 1px solid;
   background: cornflowerblue;
-  width: 100%;
 }
 
 .background-gradient {
-  background: linear-gradient(to bottom right, red, yellow);;
+  background: linear-gradient(to bottom right, red, yellow);
 }
 
 
 /* changing skill color on hover */
 .yellowSkill {
-  background: yellow;
+  background: linear-gradient(to bottom, white, yellow);
   border: 2px solid red;
-  padding: 5px;
+  padding: 6px 6px 6px 6px;
   border-radius: 25px;
-  margin: 15px;
+  margin: 10px;
 }
 
 .yellowSkill:hover {
   color: white;
-  background-color: red;
+  background: linear-gradient(to bottom, red, black);
   border: 2px solid yellow;
 }
 
@@ -313,14 +313,14 @@ animation-direction: alternate;
 }
 
 .clicked-skill-after-winning {
-  border: 2px dotted yellow;
+  border: 1px solid yellow;
   border-radius: 25px;
-  line-height: 6;
+  /*line-height: 6;*/
   color: white;
   font-size: 18px;
-  text-shadow: 2px 2px 4px #FF0000;
-  /*background: rgba(255, 255, 255, 0.5);*/
-  background: black;
+  /*text-shadow: 2px 2px 4px #FF0000;*/
+  text-shadow: 2px 2px 4px #000000;
+  background: linear-gradient(to bottom right, red, yellow);
 }
 
 /* colorful-text changes color */
@@ -430,5 +430,16 @@ animation-direction: alternate;
       background: url(assets/drought.jpg);
       min-height: 350px;
       background-size: cover;
+  }
+
+  .yellowSkill {
+    border: 2px solid purple;
+    font-size: 12px; /*smaller text on small screens so skills are readable*/
+  }
+
+  .clicked-skill-after-winning {
+    border: 2px solid purple;
+    font-size: 16px;
+    background: linear-gradient(to bottom right, red, yellow);
   }
 }
