added simple-shadow to h1s in work section

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -13,6 +13,10 @@ body {
   padding-top: 70px;
 }
 
+.simple-shadow {
+  text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+}
+
 /*parallax effect*/
 
 .background {
